--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 <body>
 
   <header>
-    <h1>Dapo's Portfolio</h1>
-    <h2>I'm a Web Developer</h2>
+    <h1>Adedapo's Portfolio</h1>
+    <h2>I'm a Web Developer and a digital marketer with a passion for innovation.</h2>
   </header>
 
   <div class="project">
