--- a/index.html
+++ b/index.html
@@ -104,12 +104,11 @@
   </div>
 
   <div class="project">
-    <h3>IT Team Task Scheduler</h3>
-    <p>A clean and styled site to help IT teams manage and schedule tasks efficiently with real-world productivity tools linked.</p>
-    <div class="buttons">
-      <a href="PASTE_YOUR_IT_SCHEDULER_LINK_HERE" target="_blank">View Project</a>
-    </div>
-  </div>
+  <h3>IT Team Task Scheduler</h3>
+  <p>A clean and styled website for IT teams to schedule and manage tasks.</p>
+  <img src="assets/images/it-scheduler-screenshot" alt="IT Scheduler Screenshot" height="250">
+</div>
+
 
   <footer>
     <a href="./public/about.html">About Me</a> | 
