--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="project">
   <h3>IT Team Task Scheduler</h3>
   <p>A clean and styled website for IT teams to schedule and manage tasks.</p>
-  <img src="assets/images/it-scheduler-screenshot.png" alt="IT Scheduler Screenshot" height="250">
+  <img src="./assets/images/it-scheduler-screenshot.png" alt="IT Scheduler Screenshot" height="250">
 </div>
 
 
